# slgl

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/data/: CMakeLists.txt
common/data/include/slgl/common/data/: Data.hpp  Image.hpp  Shader.hpp
common/data/src/: Image.cpp
common/math/: CMakeLists.txt
common/math/include/slgl/common/: Math.hpp
common/math/src/: Math.cpp
common/utils/: CMakeLists.txt
common/utils/include/slgl/common/utils/: ObserverPattern.hpp
runtime/: CMakeLists.txt
runtime/executable/: CMakeLists.txt
runtime/executable/src/: main.cpp
runtime/graphics/: CMakeLists.txt
runtime/graphics/backends/WebGPU/: CMakeLists.txt
runtime/graphics/backends/WebGPU/headers/: WebGPUContext.hpp  WebGPUMipmapGeneratorShader.hpp
runtime/graphics/backends/WebGPU/headers/GFX/: WebGPUBindSet.hpp  WebGPUBuffer.hpp  WebGPUCommandBuffer.hpp  WebGPUGFX.hpp  WebGPUSampler.hpp  WebGPUShaderModule.hpp  WebGPUShaderPipelineLayout.hpp  WebGPUShaderRenderPipeline.hpp  WebGPUSurface.hpp  WebGPUTexture.hpp
runtime/graphics/backends/WebGPU/include/slgl/runtime/graphics/backends/WebGPU/: WebGPUBackend.hpp  WebGPUBindSet.hpp  WebGPUBuffer.hpp  WebGPUCommandEncoder.hpp  WebGPUContext.hpp  WebGPUConverters.hpp  WebGPUDebug.hpp  WebGPULimits.hpp  WebGPURenderEncoder.hpp  WebGPUSampler.hpp  WebGPUShaderModule.hpp  WebGPUShaderPipelineLayout.hpp  WebGPUShaderRenderPipeline.hpp  WebGPUSurface.hpp  WebGPUTexture.hpp
runtime/graphics/backends/WebGPU/src/: WebGPUBackend.cpp  WebGPUBindSet.cpp  WebGPUBindSetLayout.cpp  WebGPUBuffer.cpp  WebGPUCommandBuffer.cpp  WebGPUCommandEncoder.cpp  WebGPUContext.cpp  WebGPUConverters.cpp  WebGPUCreators.cpp  WebGPUDebug.cpp  WebGPUFactories.cpp  WebGPULimits.cpp  WebGPURenderEncoder.cpp  WebGPUSampler.cpp  WebGPUShaderModule.cpp  WebGPUShaderPipelineLayout.cpp  WebGPUShaderRenderPipeline.cpp  WebGPUSurface.cpp  WebGPUTexture.cpp  WebGPUTextureView.cpp
runtime/graphics/backends/WebGPU/src/GFX/: WebGPUBindSet.cpp  WebGPUBindSetLayout.cpp  WebGPUBuffer.cpp  WebGPUCommandBuffer.cpp  WebGPUCommandEncoder.cpp  WebGPUGFX.cpp  WebGPURenderEncoder.cpp  WebGPUSampler.cpp  WebGPUShaderModule.cpp  WebGPUShaderPipelineLayout.cpp  WebGPUShaderRenderPipeline.cpp  WebGPUSurface.cpp  WebGPUTexture.cpp  WebGPUTextureView.cpp
runtime/graphics/include/slgl/runtime/graphics/: Backend.hpp  BindSet.hpp  Buffer.hpp  CommandBuffer.hpp  CommandEncoder.hpp  Flags.hpp  GFX.hpp  Graphics.hpp  MipmapGenerator.hpp  Queue.hpp  RenderEncoder.hpp  Sampler.hpp  ShaderModule.hpp  ShaderPipeline.hpp  Surface.hpp  SurfaceFactory.hpp  Texture.hpp
runtime/graphics/src/: BindSetBuilder.cpp  BufferBuilder.cpp  Graphics.cpp  MipmapGenerator.cpp  SamplerBuilder.cpp  ShaderModuleBuilder.cpp  ShaderPipelineBuilder.cpp  TextureBuilder.cpp
runtime/physics/: CMakeLists.txt
runtime/platform/: CMakeLists.txt
runtime/platform/backends/GLFW/: CMakeLists.txt
runtime/platform/backends/GLFW/include/slgl/runtime/platform/backends/GLFW/: GLFWBackend.hpp  GLFWWindow.hpp
runtime/platform/backends/GLFW/src/: GLFWBackend.cpp  GLFWWindow.cpp
runtime/platform/backends/SDL3/: CMakeLists.txt
runtime/platform/backends/SDL3/include/slgl/runtime/platform/backends/SDL3/: SDL3Backend.hpp  SDL3Window.hpp
runtime/platform/backends/SDL3/src/: SDL3Backend.cpp  SDL3Window.cpp
runtime/platform/include/slgl/runtime/platform/: Backend.hpp  IWindow.hpp  Platform.hpp  Window.hpp
runtime/platform/src/: Platform.cpp
runtime/resource_reader/: CMakeLists.txt
runtime/scene/: CMakeLists.txt
runtime/simulation/: CMakeLists.txt
runtime/surfaces/: CMakeLists.txt
runtime/surfaces/backends/GLFW_WebGPU/: CMakeLists.txt
runtime/surfaces/backends/GLFW_WebGPU/headers/backends/: GLFW_WebGPU_SurfaceCreator.hpp
runtime/surfaces/backends/GLFW_WebGPU/src/: GLFW_WebGPU_SurfaceCreator.cpp
runtime/surfaces/backends/SDL3_WebGPU/: CMakeLists.txt
runtime/surfaces/backends/SDL3_WebGPU/headers/backends/: SDL3_WebGPU_SurfaceCreator.hpp
runtime/surfaces/backends/SDL3_WebGPU/src/: SDL3_WebGPU_SurfaceCreator.cpp
runtime/surfaces/include/slgl/runtime/surfaces/: Surfaces.hpp
runtime/surfaces/src/: Surfaces.cpp
